# fire-collector-bot

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  README_1.md  cmake_install.cmake  compile_commands.json  proj1.uvguix.17738  proj1.uvguix.26785  proj1.uvguix.Stewart  proj1.uvguix.kokol  proj1.uvguix.lenovo  proj1.uvguix.setia  proj1.uvoptx  proj1.uvprojx
CMSIS/: core_cm3.c  core_cm3_linux.c
Hardware/: Bsp.c  Bsp.h  CH452.c  CH452.h  Motor.c  Motor.h  mpu6050.c  mpu6050.h  pid.c  pid.h  sys.c  sys.h
Listings/: startup_stm32f10x_md.lst
Objects/: bsp.crf  ch452.crf  core_cm3.crf  inv_mpu.crf  inv_mpu_dmp_motion_driver.crf  main.crf  misc.crf  motor.crf  movement.crf  mpu6050.crf  pid.crf  proj1.axf  proj1.build_log.htm  proj1.htm  proj1.lnp  proj1_Target 1.dep  stm32f10x_adc.crf  stm32f10x_bkp.crf  stm32f10x_can.crf  stm32f10x_cec.crf  stm32f10x_crc.crf  stm32f10x_dac.crf  stm32f10x_dbgmcu.crf  stm32f10x_dma.crf  stm32f10x_exti.crf  stm32f10x_flash.crf  stm32f10x_fsmc.crf  stm32f10x_gpio.crf  stm32f10x_i2c.crf  stm32f10x_it.crf  stm32f10x_iwdg.crf  stm32f10x_pwr.crf  stm32f10x_rcc.crf  stm32f10x_rtc.crf  stm32f10x_sdio.crf  stm32f10x_spi.crf  stm32f10x_tim.crf  stm32f10x_usart.crf  stm32f10x_wwdg.crf  sys.crf  (+1 more)
User/: main.c  movement.c  movement.h  types.h
